# opspilot

./: .pre-commit-config.yaml
.github/workflows/: identity-service.yml
infra/: docker-compose.yml
services/identity-service/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
services/identity-service/alembic/: env.py
services/identity-service/alembic/versions/: ebae42a68130_create_users_table.py
services/identity-service/app/: main.py
services/identity-service/app/core/: config.py  security.py
services/identity-service/app/db/: base.py  session.py
services/identity-service/app/models/: user.py
services/identity-service/app/repositories/: base.py  user.py
services/identity-service/app/schemas/: user.py
